feat: 保护私人数据 - 从版本控制中移除数据库文件并更新.gitignore
- 从Git跟踪中移除data/memories.db文件（保留本地文件）
- 更新.gitignore规则，忽略所有数据库文件和私人数据
- 添加对日志文件、环境配置文件、备份文件的保护
- 确保未来提交不会意外包含敏感信息

--- a/.gitignore
+++ b/.gitignore
@@ -110,8 +110,44 @@ pids
 ehthumbs.db
 Thumbs.db
 
-# Database files (keep structure but ignore data)
-# data/*.db
+# Database files and private data (keep structure but ignore data)
+data/*.db
+data/*.sqlite
+data/*.sqlite3
+data/memories.db
+data/memories.json
+data/config.json
+data/user-data.json
+
+# Any JSON files in data directory that might contain private data
+data/*.json
+
+# Backup files of databases
+data/*.db.bak
+data/*.sqlite.bak
+data/*.json.bak
+
+# Log files that might contain sensitive information
+logs/
+*.log
+app.log
+error.log
+combined.log
+
+# Environment files with sensitive configuration
+.env.local
+.env.development
+.env.staging
+.env.production.local
+
+# User-specific configuration files
+config/user.json
+config/local.json
+user-config.json
+
+# Backup directories
+backups/
+backup/
 
 # Backup files
 *.bak
