--- a/.gitignore
+++ b/.gitignore
@@ -74,7 +74,6 @@ dist
 
 # Gatsby files
 .cache/
-public
 
 # Storybook build outputs
 .out
@@ -119,8 +118,9 @@ data/memories.json
 data/config.json
 data/user-data.json
 
-# Any JSON files in data directory that might contain private data
+# Any JSON files in data directory that might contain private data (except ports.json)
 data/*.json
+!data/ports.json
 
 # Backup files of databases
 data/*.db.bak
