--- a/package.json
+++ b/package.json
@@ -71,14 +71,10 @@
   "homepage": "https://github.com/eragonht1/simple-memory-mcp#readme",
   "jest": {
     "testEnvironment": "node",
+    "extensionsToTreatAsEsm": [".js"],
     "testMatch": [
       "**/tests/**/*.test.js"
     ],
-    "globals": {
-      "jest": {
-        "useESM": true
-      }
-    },
     "transform": {},
     "moduleNameMapper": {
       "^(\\.{1,2}/.*)\\.js$": "$1"
