--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
     "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
+    "build": "node scripts/init-database.js",
     "deploy": "node scripts/deploy.js",
     "verify-publish": "node scripts/verify-publish-ready.js"
   },
