--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-memory-mcp",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "A Model Context Protocol (MCP) server for managing user memories with web interface",
   "main": "src/server.js",
   "type": "module",
@@ -56,7 +56,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/eragonht1/simple-memory-mcp.git"
+    "url": "git+https://github.com/eragonht1/simple-memory-mcp.git"
   },
   "bugs": {
     "url": "https://github.com/eragonht1/simple-memory-mcp/issues"
