--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,6 +7,9 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      releases: write
     
     steps:
       - name: Checkout code
@@ -48,6 +51,7 @@ jobs:
 
       - name: Update GitHub release description
         uses: actions/github-script@v7
+        continue-on-error: true
         with:
           script: |
             const { data: release } = await github.rest.repos.getReleaseByTag({
