fix: 修复发布流程问题
- 添加prepublishOnly脚本确保发布前运行测试和验证
- 修复deploy.js中的npm run init-db命令为npm run build
- 修复deploy.js中的ES模块导入问题
- 更新GitHub Actions工作流使用最新版本的actions/cache
- 改进CI工作流中的包安装测试，避免全局安装权限问题

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Cache dependencies
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: ~/.npm
           key: ${{ runner.os }}-node-${{ matrix.node-version }}-${{ hashFiles('**/package-lock.json') }}
@@ -48,7 +48,10 @@ jobs:
       - name: Test package installation
         run: |
           npm pack
-          npm install -g ./simple-memory-mcp-*.tgz
+          mkdir test-install
+          cd test-install
+          npm init -y
+          npm install ../simple-memory-mcp-*.tgz
         shell: bash
 
       - name: Upload coverage to Codecov (Ubuntu + Node 18 only)
