--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-memory-mcp",
-  "version": "1.3.1",
+  "version": "1.3.2-test.0",
   "description": "A Model Context Protocol (MCP) server for managing user memories with web interface",
   "main": "src/server.js",
   "type": "module",
